# Experiment-Orchestrator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/exporch/: __init__.py
src/exporch/configuration/: config.py
src/exporch/experiment/: __init__.py  benchmarking_experiment.py  experiment.py
src/exporch/utils/: __init__.py  parameters_count.py
src/exporch/utils/causal_language_modeling/: __init__.py  conversation_utils.py  pl_datasets.py  pl_models.py  pl_trainer.py
src/exporch/utils/classification/: __init__.py  classification_utils.py  pl_datasets.py  pl_metrics.py  pl_models.py  pl_trainer.py
src/exporch/utils/device_utils/: __init__.py  device_utils.py
src/exporch/utils/general_framework_utils/: __init__.py  datamodule_dispatcher.py  dataset_dispatcher.py  datasets.py  model_dispatcher.py  trainer_dispatcher.py
src/exporch/utils/model_utils/: __init__.py  layers_extraction.py  model_utils.py
src/exporch/utils/pl_utils/: pl_datasets.py  utility_mappings.py
src/exporch/utils/plot_utils/: __init__.py  heatmap.py
src/exporch/utils/print_utils/: print_utils.py
src/exporch/utils/storage_utils/: storage_utils.py
src/exporch/wrapping/: model_wrapper.py
src/test/configuration/: test_config.py  test_experiment.py
src/test/data/: CONFIG.yaml
src/test/results/: config.json
