[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "exporch"
version = "0.1.0"
description = "A package for orchestrating experiments"
authors = [{name = "Enrico Simionato"}]
dependencies = [
    "pyyaml",
    "matplotlib",
    "torch",
    "torchmetrics",
    "pytorch-lightning",
    "transformers",
    "bitsandbytes",
    "peft",
    "lm_eval"
]
