[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "exporch"
version = "0.1.0"
description = "A package for orchestrating experiments"
authors = [{name = "Enrico Simionato"}]
dependencies = [
    "bitsandbytes",
    "lm_eval",
    "matplotlib",
    "peft",
    "pyyaml",
    "pytorch-lightning",
    "tensorboard",
    "torch",
    "torchmetrics",
    "transformers"
]
